# simcity-noinstall

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  annotated.html  array__size_8h.html  array__size_8h_source.html  classes.html  files.html  float_8h.html  float_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  group__carray__size.html  group__fake__keys.dot  group__fake__keys.html  group__fake__keys.map  group__fake__keys.md5  group__fake__keys__offsets.dot  group__fake__keys__offsets.html  group__fake__keys__offsets.map  group__fake__keys__offsets.md5  group__float__ops.html  group__hooks.html  group__ini.html  group__lookup.html  group__paths.html  group__stubs.html  hooks_8h.html  hooks_8h__incl.dot  hooks_8h__incl.map  hooks_8h__incl.md5  hooks_8h_source.html  index.html  ini_8h.html  (+43 more)
.github/vcpkg/: toolchain.cmake  x86-windows-clang-toolchain.cmake.in  x86-windows-clang.cmake
.github/workflows/: ci.yml
cmake/: generate-stubs.cmake  generate-tables.cmake  lint.cmake
docs/: Doxyfile
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  pages_0.js  (+3 more)
source/: array_size.h  float.asm  float.h  hooks.asm  hooks.c  hooks.h  ini.c  ini.h  paths.c  paths.h  reg_keys.h  simcity-noinstall.c  stubs.c  stubs.h  tables.c  tables.h  winmm.txt
source/tables/: dword_tbl.c  dword_tbl.h  paths_tbl.c  paths_tbl.h  reg_tbl.c  reg_tbl.h  section_tbl.c  section_tbl.h  string_tbl.c  string_tbl.h
tools/: winmm-exports.bat
tools/winmm-exports/: CMakeLists.txt  main.c
